--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li data-menuanchor="thirdPage"><a class="side-nav__item" href="#thirdPage"><span>吉祥物設計</span></a></li>
         <li data-menuanchor="4thPage"><a class="side-nav__item" href="#4thPage"><span>手天使形象</span></a></li>
         <!-- <li data-menuanchor="5thPage"><a class="side-nav__item" href="#5thPage"><span>果子營養聚樂部</span></a></li> -->
-        <li><a class="home" href="https://water13100.github.io/water13100.github.io/"><span>回主頁</span></a></li>
+        <li><a class="home" href="https://water13100.github.io/water13100.github.io/"><span>Back to Portfolio</span></a></li>
 
         <!-- <li data-menuanchor="6thPage"><a class="side-nav__item" href="#6thPage"><span>海報設計</span></a></li> -->
    
